
// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.mtbf.video;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/mtbf/video";

service FacebookService {
  // OpenFacebook opens Facebook
  rpc OpenFacebook (OpenFacebookRequest) returns (google.protobuf.Empty) {}
}

message OpenFacebookRequest {
  string intentURL = 1;
}

